--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@ngui/datetime-picker": "^0.16.2",
     "core-js": "^2.4.1",
     "ngx-facebook": "^2.4.0",
     "rxjs": "^5.1.0",
